--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Super Mario</title>
+    <link rel="stylesheet" href="syle.css">
+</head>
+<body>
+    <div class="game-board">
+        <img src="./imagem/clouds.png" class="nuvem">
+         <img src="./imagem/mario.gif" class="mario">
+         <img src="./imagem/pipe.png" class="pipe">
+    </div>
+</body>
+</html>
