--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
          <img src="./imagem/mario.gif" class="mario">
          <img src="./imagem/pipe.png" class="pipe">
     </div>
+
+    <script src="main.js"></script>
 </body>
 </html>
